recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:6: error: type mismatch;
 found   : Unit
 required: Int
    i= 0
     ^