recursion.cons.length.Length.scala.code
var i =0
def length(l:List[Int]): Int = {
    if (l == Nil){
    return(i)
    i= 0
  } else{
    i=i+1
    length(l.tail)
  }
}